<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.25"
        android:scaleType="centerCrop"
        android:src="@drawable/lymm_beer_fest_home_bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/when"
                android:theme="@style/YellowTitle" />

            <TextView
                android:id="@+id/whenText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_and_times"
                android:theme="@style/WhiteText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_much"
                android:theme="@style/YellowTitle" />

            <TextView
                android:id="@+id/howMuchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prices"
                android:theme="@style/WhiteText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/where"
                android:theme="@style/YellowTitle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/address"
                android:theme="@style/WhiteText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="4dp" />

                <Button
                    android:id="@+id/directions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/get_directions"
                    android:textAlignment="center"
                    android:theme="@style/YellowButton" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:text="@string/what_else"
                android:theme="@style/YellowTitle" />

            <TextView
                android:id="@+id/whatElseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="24dp"
                android:text="@string/additional"
                android:theme="@style/WhiteText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:text="@string/music"
                android:theme="@style/YellowTitle" />

            <TextView
                android:id="@+id/musicText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="24dp"
                android:theme="@style/WhiteText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textAlignment="center"
                android:text="Thanks to our main sponsor this year:"
                android:theme="@style/SponsorText" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:src="@drawable/kids_planet"></ImageView>
        </LinearLayout>

    </ScrollView>

</FrameLayout>